Change database from mongodb to Cassandra

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ oauth.consumerKey=pJsB9ypC4x2Zag86nmswJaX93
 oauth.consumerSecret=1K5GZlJuZsy14x1Pq2w4rzt4HHwYSia3W7oW00MVTL4a2Mooqv
 oauth.accessToken=3652931055-fBRxRMiv1hur4J3oVVBy10xGkPFrbO8voVYLiiW
 oauth.accessTokenSecret=xCv6vQYLDkZ88zckmMGwmQX4hTWXqL7p4DZ90rzdeRgxv
+
+vk.app_id=5313219
+vk.app_secret=jnnpVbVQIk6sjGjjEitJ
