--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
